--- a/config.env
+++ b/config.env
@@ -1,8 +1,8 @@
 CONFIG_ENV=config.env
 
-KERNEL_SOURCE=https://github.com/PixelExperience-Devices/kernel_xiaomi_thyme
-KERNEL_SOURCE_BRANCH=thirteen
-KERNEL_CONFIG=thyme_defconfig
+KERNEL_SOURCE=https://github.com/MiCode/Xiaomi_Kernel_OpenSource/tree/alioth-r-oss
+KERNEL_SOURCE_BRANCH=alioth-r-oss
+KERNEL_CONFIG=defconfig
 KERNEL_IMAGE_NAME=Image.gz-dtb
 ARCH=arm64
 ADD_LOCALVERSION_TO_FILENAME=false
